Bug 165947 - Ignores account order: unable to set preferred Jabber account
Summary: Ignores account order: unable to set preferred Jabber account
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-07 16:04 UTC by Roman Odaisky
Modified: 2009-02-14 11:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Odaisky 2008-07-07 16:04:39 UTC
Version:            (using KDE 4.0.83)
Installed from:    Debian testing/unstable Packages
OS:                Linux

I have two Jabber accounts, the main one and a Gmail one for fallback purposes. I want Kopete to use the latter only when the main account is for some reasons offline, but in Kopete that comes with KDE 4.1 there’s no way of specifying account preference like it was possible in older versions by using up/down buttons. I can drag accounts up and down but that has no effect. I can reorder accounts in the configuration file, but that makes Kopete crash when changing any settings and clicking OK (likely it’s expecting records to be in alphabetical order).

This is a regression from KDE 3.5. See also #87579.
Comment 1 Roman Jarosz 2009-02-14 11:54:38 UTC
SVN commit 925830 by rjarosz:

Backport SVN commit 916110.
Set account priority based on position in account config view.
Allow user to move accounts between identities with drag&drop.

BUG: 165947
CCBUG: 144627
CCBUG: 81629



 M  +1 -1      CMakeLists.txt  
 A             accounttreewidget.cpp   [License: GPL (v2+)]
 A             accounttreewidget.h   [License: GPL (v2+)]
 M  +49 -46    kopeteaccountconfig.cpp  
 M  +8 -1      kopeteaccountconfigbase.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=925830