Backport SVN commit 916110. Set account priority based on position in account config view. Allow user to move accounts between identities with drag&drop.

BUG: 165947
CCBUG: 144627
CCBUG: 81629


svn path=/branches/KDE/4.2/kdenetwork/kopete/; revision=925830